--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <li><a href="https://www.facebook.com">Youtube</a></li>
   <li><a href="https://www.linkedin.com">LinkedIn</a></li>
   <li><a href="https://www.github.com">Github</a></li>
+  <li><a href="https://zxxdan.github.io/project2/">zxxdan github project 2</a></li>
 </ul>
 
 <table border="1">
